<resources>
    <string name="app_name">Seen</string>
    <string name="login">Login</string>
    <string name="make_account">Create an account</string>
    <string name="login_now">Login now</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="dont_have_account">Don\'t have an account? </string>
    <string name="register_now"> Register now</string>
    <string name="error_email_empty">Please fill the email field</string>
    <string name="error_email_invalid">Please enter a valid email address</string>
    <string name="error_password_empty">Please enter your password</string>
    <string name="error_password_short">Password must be at least 6 characters long</string>
    <string name="error_password_spaces">Password cannot contain spaces</string>
    <string name="loading">Loading...</string>
    <string name="login_succesful">Login successful</string>
    <string name="error_login">Login failed"</string>
    <string name="create_account_now">Create your account now</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_hint">Phone Number</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="continue_signup">Continue</string>
    <string name="already_has_account">Already have an account? </string>
    <string name="error_first_name_empty">Please fill the first name field</string>
    <string name="error_last_name_empty">Please fill the last name field</string>
    <string name="error_phone_empty">Please fill the phone number field</string>
    <string name="error_phone_invalid">Please enter a valid phone number</string>
    <string name="error_confirm_password_empty">Please confirm your password</string>
    <string name="error_password_not_match">Passwords do not match</string>
    <string name="signed_up_successfully">Signed up Successfully</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthdate">Birthdate</string>
    <string name="et_birthdate">mm/dd/yy</string>
    <string name="weight">Weight</string>
    <string name="et_weight">Weight (kg)</string>
    <string name="height">Height</string>
    <string name="et_height">Height (cm)</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="error_height">Please enter valid height</string>
    <string name="error_weight">Please enter valid weight</string>
    <string name="error_fill_fields">Please fill all required fields</string>
    <string name="user_diabetes_type">What type of diabetes do you have?</string>
    <string name="other">Other</string>
    <string name="error_enter_type">Please select diabetes type</string>
    <string name="user_insulin_therapy">How do you prefer to take your insulin dose?</string>
    <string name="pens_syringes">pen / syringes</string>
    <string name="pump">pump</string>
    <string name="no_insulin">I do not use insulin</string>
    <string name="error_enter_insulin_therapy">Please select insulin therapy</string>
    <string name="account_made">Your account has been successfully created!</string>
    <string name="welcome_msg">We are happy to have you join us! Let\'s start monitoring your sugar together, step by step.</string>
    <string name="error_internet_connection">No internet connection</string>
    <string name="error_io_dispatcher">Network Failure</string>
    <string name="error_conversion">Conversion error</string>
    <string name="welcome_to">Welcome to</string>
    <string name="home_welcome_msg">Take control of your journey with sugar with care, support, and confidence.</string>
    <string name="start_now">Start Now</string>
    <string name="skip">Skip</string>
    <string name="on_boarding_1_title">Easily track your sugar level</string>
    <string name="on_boarding_1_body">Record your daily readings and learn more about your body every day.</string>
    <string name="on_boarding_2_title">Stay connected, and always be supported.</string>
    <string name="on_boarding_2_body">Join a supportive community where people with diabetes share their experiences, advice, and motivations.</string>
    <string name="on_boarding_3_title">Share your health status with your family</string>
    <string name="on_boarding_3_body">Allow your family members to monitor your health and check on you at any time.</string>
    <string name="start">Start</string>
    <string name="home">Home</string>
    <string name="community">Community</string>
    <string name="report">Reports</string>
    <string name="more">More</string>
    <string name="hello_username">Hello,</string>
    <string name="type_1">Type 1 Diabetes</string>
    <string name="type_2">Type 2 Diabetes</string>
    <string name="type_lada">Type LADA Diabetes</string>
    <string name="type_mody">Type MODY Diabetes</string>
    <string name="type_gestational">Type gestational Diabetes</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="blood_sugar_level">Blood sugar level (mg/dL)</string>
    <string name="blood_sugar_level_graph">Blood sugar</string>
    <string name="time">Time</string>
    <string name="alert_title">Alert</string>
    <string name="alert_body">Urgent help</string>
    <string name="chatbot_title">Chatbot</string>
    <string name="chatbot_body">Talk to us</string>
    <string name="reminder_title">Set your reminder</string>
    <string name="reminder_body">Set a suitable time to receive regular alerts that help you accurately track your health data.</string>
    <string name="no_blood_reading">No measurement</string>
    <string name="no_logs">There are no Logs</string>
    <string name="start_logs_now">Get started and log now</string>
    <string name="no_data_available">No data available</string>
    <string name="title_reminders">Reminders</string>
    <string name="daily_health_reminder">Daily Health Reminder</string>
    <string name="health_reminder_description">Do not forget to monitor your blood sugar level regularly, take your meals on time, and follow your health instructions to maintain your daily balance and health.</string>
    <string name="no_reminders_title">No reminders yet</string>
    <string name="no_reminders_subtitle">Start and set your reminders</string>
    <string name="btn_create_reminder">Create Reminder</string>
    <string name="schedule_in">Schedule in:</string>
    <string name="add_reminder_title">Add Reminder</string>
    <string name="title">Title</string>
    <string name="medicine_title">Medicine name</string>
    <string name="appointment">appointment</string>
    <string name="create_reminder">Create Reminder</string>
    <string name="seen_reminder">Seen Reminder</string>
    <string name="medicine_name_notification">Medicine:</string>
    <string name="logs">Logs</string>
    <string name="log_title">Title</string>
    <string name="log_title_hint">Log title</string>
    <string name="log_date">Log date</string>
    <string name="log_time">Time</string>
    <string name="log_description">Log description</string>
    <string name="log_description_hint">Type a description for the log</string>
    <string name="button_glucose_title">Glucose</string>
    <string name="button_medication_title">Medication</string>
    <string name="button_meal_title">Meal</string>
    <string name="glucose_log_measurement_type_title">Reading type</string>
    <string name="glucose_log_measurement_type_random">Random</string>
    <string name="glucose_log_measurement_type_after_meal">After meal</string>
    <string name="glucose_log_measurement_type_before_meal">Before meal</string>
    <string name="glucose_log_measurement_type_fasting">Fasting</string>
    <string name="glucose_log_sugar_measurement_value_title">Glucose level</string>
    <string name="glucose_log_sugar_measurement_value_hint">Blood sugar measurement value (mg/dl)</string>
    <string name="glucose_log_a1c_title">A1C estimation</string>
    <string name="glucose_log_a1c_hint">A1C</string>
    <string name="notes_title">Notes</string>
    <string name="notes_hint">Write your Notes...</string>
    <string name="medication_title">Medicine (choose one or more)</string>
    <string name="meal_type">Meal Type</string>
    <string name="meal_breakfast">Breakfast</string>
    <string name="meal_lunch">Lunch</string>
    <string name="meal_dinner">Dinner</string>
    <string name="meal_snack">Snack</string>
    <string name="meal_description">Meal Description</string>
    <string name="meal_description_hint">Enter number of times</string>
    <string name="carbs_estimation">Carbohydrates Estimation</string>
    <string name="carbs_estimation_hint">Enter number of times</string>
    <string name="calories_estimation">Calories Estimation</string>
    <string name="calories_estimation_hint">Enter number of times</string>
    <string name="add_new_log">Add Log</string>
    <string name="please_fill_at_least_one_section">Please fill at least one section</string>
    <string name="please_fill_log_title">Please fill log title</string>
    <string name="please_select_measurement_type">Please select measurement type</string>
    <string name="please_fill_glucose_value">Please fill glucose value</string>
    <string name="please_select_medication">Please select medication</string>
    <string name="please_select_meal_type">Please select meal type</string>
    <string name="please_fill_meal_description">Please fill meal description</string>
    <string name="please_fill_log_description">Please fill log description</string>
    <string name="please_fill_medication_name">Please enter a medicine name</string>
    <string name="add_medicine_title">Add Medicine</string>
    <string name="medicine_label">Medicine</string>
    <string name="medicine_name_hint">Enter medicine name</string>
    <string name="btn_add_medicine">Add Medicine</string>
    <string name="edit_log">Edit Log</string>
    <string name="delete_log">Delete Log</string>
    <string name="glucose_record">Glucose Record</string>
    <string name="medication_record">Medication Record</string>
    <string name="meal_record">Meal Record</string>
    <string name="medications">Medications</string>
    <string name="alert_dialog_title_log">Delete Log</string>
    <string name="alert_dialog_message_log">Are you sure you want to delete this Log?</string>
    <string name="alert_dialog_positive_button_log">Delete</string>
    <string name="alert_dialog_negative_button_log">Cancel</string>
    <string name="category_type1_lada">Type 1 / LADA</string>
    <string name="category_type2">Type 2</string>
    <string name="category_mody">Mody</string>
    <string name="category_gestational">Gestational</string>
    <string name="category_general">General</string>
    <string name="category_advise">Advise</string>
    <string name="post_time">1 sec ago</string>
    <string name="Share_your_experience">Share your experience and connect with others</string>
    <string name="share_something_with_community">Share something with the community...</string>
    <string name="search">Search</string>
    <string name="posts">Posts</string>
    <string name="accounts">Accounts</string>
    <string name="add_post">Add Post</string>
    <string name="make_comment">Make a comment...</string>
    <string name="searchEmpty">No results were found for this search.</string>
    <string name="searchAgain">Search for something else.</string>
    <string name="likes">Likes</string>
    <string name="search_hint">Search here...</string>
    <string name="post_title">Post Title</string>
    <string name="post_title_hint">Enter post title...</string>
    <string name="post_description">Post Description</string>
    <string name="post_description_hint">Share your experience or advice…</string>
</resources>