<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.community.fragment.CommunityFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clheaderCommunity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp"
        android:background="@drawable/bg_home"
        >

        <ImageView
            android:id="@+id/ivCommunity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_community"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCoomunity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/cairo_bold"
            android:gravity="start"
            android:text="@string/community"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivCommunity"
            app:layout_constraintStart_toEndOf="@+id/ivCommunity"
            app:layout_constraintTop_toTopOf="@+id/ivCommunity" />

        <ImageView
            android:id="@+id/ivChats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chats"
            app:layout_constraintBottom_toBottomOf="@+id/tvCoomunity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvCoomunity"/>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_home_card_gradient"
            android:elevation="10dp"
            app:cardCornerRadius="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCoomunity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_home_card_gradient"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_communty_cardview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo"
                    android:text="@string/Share_your_experience"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="@color/white"
                    android:elevation="10dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_communty_cardview">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp">

                        <TextView
                            android:id="@+id/tv_communty_addPost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="8dp"
                            android:layout_marginStart="16dp"
                            android:fontFamily="@font/cairo"
                            android:text="@string/share_something_with_community"
                            android:textColor="#6976EB"
                            android:textSize="12sp"
                            android:textStyle="normal"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/ivAddPost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:src="@drawable/ic_add_log_button"
                            app:layout_constraintBottom_toBottomOf="@+id/tv_communty_addPost"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/tv_communty_addPost" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>





    </androidx.constraintlayout.widget.ConstraintLayout>

    <HorizontalScrollView
        android:id="@+id/categoriesScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clheaderCommunity">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chipSpacingHorizontal="8dp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipGeneral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CategoryChip"
                android:fontFamily="@font/cairo_bold"
                android:checked="true"
                android:text="@string/category_general" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipType1"
                style="@style/CategoryChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_type1_lada" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipType2"
                style="@style/CategoryChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_type2" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMonogenic"
                style="@style/CategoryChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_mody" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipGestational"
                style="@style/CategoryChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_gestational" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAdvise"
                style="@style/CategoryChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_advise" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>