<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.authentication.fragments.Questionnaire1Fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- ==================== Guideline ==================== -->

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_v50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />


            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/gender"
                android:textColor="@color/text_questionnaire"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMale"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/secondary"
                android:drawableTop="@drawable/ic_male"
                android:elevation="6dp"
                android:fontFamily="@font/cairo_bold"
                android:paddingTop="20dp"
                android:text="@string/male"
                android:textSize="12sp"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="@+id/guideline_v50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGender" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFemale"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/secondary"
                android:drawableTop="@drawable/ic_female"
                android:elevation="6dp"
                android:fontFamily="@font/cairo_bold"
                android:paddingTop="20dp"
                android:text="@string/female"
                android:textSize="12sp"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline_v50"
                app:layout_constraintTop_toBottomOf="@+id/tvGender" />

            <TextView
                android:id="@+id/tvBirthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/birthdate"
                android:textColor="@color/text_questionnaire"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnMale" />

            <EditText
                android:id="@+id/etBirthDate"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/et_login_signup_shape"
                android:clickable="true"
                android:drawableStart="@drawable/ic_calender"
                android:drawablePadding="15dp"
                android:elevation="8dp"
                android:focusable="false"
                android:fontFamily="@font/cairo_bold"
                android:hint="@string/birthdate"
                android:imeOptions="actionNext"
                android:inputType="none"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/text"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBirthDate" />


            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/weight"
                android:textColor="@color/text_questionnaire"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etBirthDate" />

            <EditText
                android:id="@+id/etWeight"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/et_login_signup_shape"
                android:elevation="8dp"
                android:fontFamily="@font/cairo_bold"
                android:hint="@string/et_weight"
                android:nextFocusForward="@id/etHeight"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/text"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvWeight" />

            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/height"
                android:textColor="@color/text_questionnaire"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etWeight" />

            <EditText
                android:id="@+id/etHeight"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/et_login_signup_shape"
                android:elevation="8dp"
                android:fontFamily="@font/cairo_bold"
                android:hint="@string/et_height"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/text"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHeight" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="144dp"
        android:layout_height="51dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/primary"
        android:elevation="4dp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>